--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,11 @@ repositories {
 
 dependencies {
     implementation 'redis.clients:jedis:4.3.1'
+    implementation 'org.springframework.boot:spring-boot-starter-cache' //캐시 사용을 위해 추가
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis' //스프링 부트에서 제공하는 레디스
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
