--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
   datasource:
     url: "jdbc:mysql://localhost:3306/fastsns"
     username: root
@@ -6,8 +10,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
-    open-in-view: false
 
 
