[Redis 학습 #3.sessionStore]
- 1. dependency 'org.springframework.session:spring-session-data-redis' 추가 하여 session store 를 레디스로 사용
- 2. SessionController 를 통해서 세션 사용 확인

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
     implementation 'redis.clients:jedis:4.3.1'
     implementation 'org.springframework.boot:spring-boot-starter-cache' //캐시 사용을 위해 추가
+    implementation 'org.springframework.session:spring-session-data-redis' //session store 를 redis 를 사용하기 위해 추가
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
